[FIX] Fix timer error and remove useless class, and change cursor settings

--- a/master.css
+++ b/master.css
@@ -34,6 +34,10 @@ html, body {
 	color: black;
 }
 
+.gamepad > .box.occupied {
+	cursor: default;
+}
+
 .gamepad > .box:hover:before {
 	content: var( --player );
 }
