[FIX] Hover value display still work when game is not starting

--- a/master.css
+++ b/master.css
@@ -38,7 +38,11 @@ html, body {
   cursor: default;
 }
 
-#gamepad > .box:hover:before {
+#gamepad.deactivated > .box:hover:before {
+  content: ""
+}
+
+#gamepad.activated > .box:hover:before {
   content: var( --player );
 }
 
