--- a/src/app/components/gamepad/gamepad.component.html
+++ b/src/app/components/gamepad/gamepad.component.html
@@ -1,4 +1,4 @@
-<div (click)="onGamepadClick($event)" class="board-container">
+<div (click)="onGamepadBoxClick($event)" class="board-container">
   <div
     class="box"
     *ngFor="let player of storage"
