--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,3 +1,3 @@
 <ttt-action-bar (stateChange)="onStateChange($event)"></ttt-action-bar>
 <ttt-gamepad (stateChange)="onStateChange($event)"></ttt-gamepad>
-<ttt-informations></ttt-informations>
+<ttt-informations (stateChange)="onStateChange($event)"></ttt-informations>
