[FIX] fix wrong using reffered to viewchild

--- a/src/app/components/gamepad/gamepad.component.html
+++ b/src/app/components/gamepad/gamepad.component.html
@@ -1,4 +1,4 @@
-<div #self (click)="onGamepadBoxClick()" class="board-container">
+<div #self (click)="onGamepadBoxClick($event)" class="board-container">
   <div
     class="box"
     *ngFor="let player of storage"
